erotima 2,not finished

--- a/public/index.html
+++ b/public/index.html
@@ -18,10 +18,7 @@
           <div class="category">
             <h2>{{this.title}}</h2>
             <a href="category.html?id={{this.id}}">
-              <img
-                src="{{this.img_url}}"
-                alt="Εικόνα κατηγορίας {{this.title}}"
-              />
+              <img src="{{this.img_url}}" alt=" {{this.title}}" />
             </a>
             <ul>
               {{#each this.subcategories}}
